fix: add binaries in jar through resources